--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   <!-- Encabezado -->
   <header class="header">
     <div class="user-info">
-      <p>Hola,</p>
-      <h1>Maria Rocio Frutos</h1>
+      <p>Hola</p>
     </div>
     <button class="profile-btn">
       <i class="fa fa-user-circle"></i>
