--- a/resultado.html
+++ b/resultado.html
@@ -2,9 +2,9 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Detalle del Lugar</title>
-    <link rel="stylesheet" href="./css/resultado.css">
+    <link href="./css/resultado.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -16,7 +16,7 @@
     <!-- Contenido principal -->
     <main class="main-content">
         <!-- Imagen del lugar -->
-        <img id="place-image" src="" alt="Lugar seleccionado" />
+        <img alt="Lugar seleccionado" id="place-image" src=""/>
 
         <!-- Distancia -->
         <p id="place-distance"></p>
@@ -31,19 +31,19 @@
         <section class="place-location">
             <h2>Ubicación</h2>
             <iframe
+                    allowfullscreen
+                    frameborder="0"
                     id="google-maps-iframe"
                     src=""
-                    frameborder="0"
-                    style="width: 100%; height: 300px; border-radius: 8px;"
-                    allowfullscreen>
+                    style="width: 100%; height: 300px; border-radius: 8px;">
             </iframe>
-            <a id="google-maps-link" href="#" target="_blank" class="maps-link">Abrir en Google Maps</a>
+            <a class="maps-link" href="#" id="google-maps-link" target="_blank">Abrir en Google Maps</a>
         </section>
     </main>
 
     <!-- Botón de retorno -->
     <footer>
-        <a href="./index.html" class="back-button">Volver al inicio</a>
+        <a class="back-button" href="./index.html">Volver al inicio</a>
     </footer>
 </div>
 
